--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/diff": "^7.0.0",
 		"@types/node": "^16.11.6",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
@@ -25,6 +26,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.2",
+		"diff": "^7.0.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	}
